--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Message#index</h1>
-<p>Find me in app/views/message/index.html.erb</p>
+<h1>Inbox</h1>
+
+<% @user.messages.each do |msg| %>
+  <p> <%= msg.workshop.title %>  <%= msg.content %> </p>
+<% end %>
