--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,2 @@
-<%# link_to "wood", universe_path(@wood)  %>
+<% @wood = @universes.friendly.find("wood") %>
+<%= link_to @wood.name, universe_path(@wood)  %>
