--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,2 +1,9 @@
-<h1>Users#dashboard</h1>
-<p>Find me in app/views/users/dashboard.html.erb</p>
+<h1>Dashboard</h1>
+
+<%= link_to "Mailbox", messages_path  %>
+
+<%= link_to "My bookings", bookings_path  %>
+
+<%= link_to "Past Bookings"  %>
+
+<%= link_to "Edit my profile", edit_profile_path  %>
