--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,7 +1,7 @@
 /* Main class */
 .navbar-wagon {
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  // box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+  // background: white;
   transition: all 0.3s ease;
   display: flex;
   height: 70px;
@@ -52,17 +52,17 @@
 .navbar-wagon-button {
   margin-left: 10px;
   padding: 0 20px;
-  border-radius: 20em;
+  border-radius: 2px;
   line-height: 40px;
-  background-color: #D23333;
-  color: white;
+  // background-color: #D23333;
+  color: #616668;
   font-size: 14px;
-  border: 2px solid #D23333;
+  border: 1px solid #616668;
 }
 .navbar-wagon-button:hover {
   color: white;
-  background: #D23333;
-  border-color: #ac2626;
+  background: black;
+  border-color: white;
 }
 
 /* Navbar search form */
