--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -142,104 +142,15 @@
 </div>
 
 <!-- mini map -->
-<!-- <div id="map" style="width: 400px; height: 400px;"></div>
+<div id="map" style="width: 400px; height: 400px;"></div>
 
 <% content_for(:after_js) do %>
   <script>
     $(document).ready(function() {
-      var styles = [
-    {
-        "featureType": "administrative",
-        "elementType": "geometry.fill",
-        "stylers": [
-            {
-                "visibility": "on"
-            }
-        ]
-    },
-    {
-        "featureType": "administrative",
-        "elementType": "labels.text.fill",
-        "stylers": [
-            {
-                "color": "#444444"
-            }
-        ]
-    },
-    {
-        "featureType": "landscape",
-        "elementType": "all",
-        "stylers": [
-            {
-                "color": "#f2f2f2"
-            }
-        ]
-    },
-    {
-        "featureType": "poi",
-        "elementType": "all",
-        "stylers": [
-            {
-                "visibility": "off"
-            }
-        ]
-    },
-    {
-        "featureType": "road",
-        "elementType": "all",
-        "stylers": [
-            {
-                "saturation": -100
-            },
-            {
-                "lightness": 45
-            }
-        ]
-    },
-    {
-        "featureType": "road.highway",
-        "elementType": "all",
-        "stylers": [
-            {
-                "visibility": "simplified"
-            }
-        ]
-    },
-    {
-        "featureType": "road.arterial",
-        "elementType": "labels.icon",
-        "stylers": [
-            {
-                "visibility": "off"
-            }
-        ]
-    },
-    {
-        "featureType": "transit",
-        "elementType": "all",
-        "stylers": [
-            {
-                "visibility": "off"
-            }
-        ]
-    },
-    {
-        "featureType": "water",
-        "elementType": "all",
-        "stylers": [
-            {
-                "color": "#ffffff"
-            },
-            {
-                "visibility": "on"
-            }
-        ]
-    }
-];
       var handler = Gmaps.build('Google');
       handler.buildMap({
         provider: {
-          styles: styles
+          styles: Diwyh.map_styles
           // possibility to pass other gmap options here
         },
         internal: { id: 'map' } }, function() {
@@ -254,11 +165,8 @@
       });
     });
   </script>
-<% end %> -->
+<% end %>
 
-
-<!-- Ne fonctionne pas -->
-<%= image_tag "https://maps.googleapis.com/maps/api/staticmap?zoom=15&size=200x200&sensor=false&maptype=roadmap&markers=color:red|#{@workshop.craftman.address}" %>
 
 <br>
 
