--- a/app/assets/stylesheets/layout/_universe_banner.scss
+++ b/app/assets/stylesheets/layout/_universe_banner.scss
@@ -1,5 +1,9 @@
 .banner-bk-gray {
   background: $gray;
   position: relative;
-  height: 100vh;
+  height: 360px;
+}
+
+.banner-bk-gray h1 {
+  font-size: 80px;
 }
