--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -1,6 +1,7 @@
 .avatar {
-  width: 30px;
-  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  border-radius: 2px;
 }
 .avatar-large {
   width: 50px;
