--- a/app/assets/stylesheets/layout/_polices.scss
+++ b/app/assets/stylesheets/layout/_polices.scss
@@ -1,6 +1,3 @@
-.white {
-  color: white;
-}
 .txt-sm {
   font-size: 12px;
 }
@@ -15,6 +12,9 @@
 }
 .txt-lg {
   font-size: 46px;
+}
+.txt-xl {
+  font-size: 150px;
 }
 .txt-light {
   font-weight: 300;
