--- a/app/views/messages/index_craftman.html.erb
+++ b/app/views/messages/index_craftman.html.erb
@@ -3,7 +3,7 @@
 <div class="chat_window">
   <ul class="messages">
     <% @messages.each do |msg| %>
-      <li class="message <%= msg.user_left_right %> appeared">
+      <li class="message <%= msg.craftman_left_right %> appeared">
         <div class="avatar">
 
         </div>
@@ -15,7 +15,7 @@
   </ul>
   <div class="bottom_wrapper clearfix">
 
-    <%= simple_form_for [ @workshop, @message ]  do |f| %>
+    <%= simple_form_for(@message, url: workshop_create_user_message_path(@workshop, @user)) do |f| %>
       <%= f.error_notification %>
         <div class="message_input_wrapper">
       <%= f.input :content, input_html: {class: "message_input"}, placeholder: "Type your message here...", label: false  %>
