--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,6 +1,12 @@
 <h1>Dashboard</h1>
 
-<%= link_to "Mailbox", messages_path  %>
+<h2>Inbox</h2>
+
+<% @threads.each do |(workshop, user), message| %>
+  <p>
+    <%= link_to "#{workshop.title} with #{workshop.craftman.first_name}", workshop_messages_path(workshop) %>
+  </p>
+<% end %>
 
 <%= link_to "My bookings", bookings_path  %>
 
