--- a/app/assets/stylesheets/layout/_universe_banner.scss
+++ b/app/assets/stylesheets/layout/_universe_banner.scss
@@ -4,6 +4,13 @@
   height: 360px;
 }
 
+.banner-bk-gray-small {
+  background: $gray;
+  position: relative;
+  height: 200px;
+}
+
 .banner-bk-gray h1 {
   font-size: 80px;
 }
+
