--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,4 +1,12 @@
-<h1>Dashboard</h1>
+<div class="title banner-bk-gray-small">
+   <div class="row">
+     <div class="col-sm-10 col-md-offset-1">
+       <h1 class="padded-md">Hello <%= @user.first_name %></h1>
+     </div>
+   </div>
+ </div>
+
+
 
 <h2>Inbox</h2>
 
