dashboard pic and notifs

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -48,6 +48,15 @@
   margin-bottom: 14px;
 }
 
+.color-line-red hr {
+  background-color: red;
+  height: 4px;
+  width: 100px;
+  text-align: left;
+  margin-left: 0px;
+  margin-bottom: 5px;
+}
+
 // margins
 .margin-verti-fat {
   margin-top: 40px;
