--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,20 +1,61 @@
+<!-- black header  -->
 <div class="title banner-bk-gray-small">
    <div class="row">
-     <div class="col-sm-10 col-md-offset-1">
+     <div class="col-xs-12 col-xs-offset-1">
        <h1 class="padded-md">Hello <%= @user.first_name %></h1>
      </div>
    </div>
  </div>
 
+ <div class="container">
+  <div class="col-xs-12 col-md-10 col-md-offset-1">
+    <!-- profile pic block w/ edit  -->
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 text-center padded-top-md">
+           <% if current_user.avatar? %>
+            <%= cl_image_tag current_user.avatar.path, height: 150, width: 150, crop: :fill, class: "profil-pic" %>
+           <% elsif current_user.facebook_picture_url %>
+            <%= image_tag current_user.facebook_picture_url,height: 150, width: 150, crop: :fill, class: "profil-pic"%>
+           <% else %>
+            <%= image_tag "loic.png", height: 150, width: 150, crop: :fill, class: "profil-pic" %>
+           <% end %>
+           <div class="marble">
+           <%= image_tag 'http://placehold.it/150x150' %></div>
+
+           <div class="txt-md txt-light text-center padded-top">
+            <h3><%= @user.first_name %></h3>
+           </div>
+
+           <div class="txt-md txt-light text-center">
+            <h3><%= @user.last_name %></h3>
+           </div>
+
+           <%= link_to "Editez profile", edit_profile_path, class: "btn btn-primary" %>
+      </div>
+
+      <!-- Notifications + inbox  -->
+      <div class="col-xs-12 col-sm-6 padded-top-md ">
+        <div class="color-line-red text-left"><hr></div>
+        <h4 class="txt-md txt-heavy">notifications</h4>
+        <p class="txt-light">Vérifiez votre pièce d'identité</p>
+        <p class="txt-light">Notez votre dernière location</p>
+        <hr>
+
+          <div class="color-line-red text-left"><hr></div>
+          <h4 class="txt-md txt-heavy">messages</h4>
+          <% @threads.each do |(workshop, user), message| %>
+          <p>
+          <%= link_to "#{workshop.title} with #{workshop.craftman.first_name}", workshop_messages_path(workshop) %>
+          </p>
+          <% end %>
+      </div>
+
+    </div>
+
+  </div>
+</div>
 
 
-<h2>Inbox</h2>
-
-<% @threads.each do |(workshop, user), message| %>
-  <p>
-    <%= link_to "#{workshop.title} with #{workshop.craftman.first_name}", workshop_messages_path(workshop) %>
-  </p>
-<% end %>
 
 <%= link_to "My bookings", bookings_path  %>
 
