--- a/app/views/shared/_universe_photo.html.erb
+++ b/app/views/shared/_universe_photo.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 
   <div class="row">
-    <div class="banner-photo" style="background-image: url(<%= @workshop.universe.banner.fullpath %>)">
+    <div class="banner-photo" style="background-image: url(<%= @universe.banner.fullpath %>)">
     </div>
   </div>
 
