--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -1,5 +1,5 @@
 <!-- BANNER -->
-<%# render 'shared/universe_photo' %>
+<%= render 'shared/universe_photo' %>
 
 <div class="container-fuid">
   <!-- photo de la banner -->
@@ -56,21 +56,7 @@
 <!-- 4 PHOTOS DE PRESENATION PAR UNIVERS -->
 <div class="container-fluid">
   <div class="row">
-    <div class="photos">
-      <div class="photo-1">
-      <!-- A remplacer les photos par l'image de chaque univers -->
-        <img src="http://placehold.it/500x300" alt="">
-      </div>
-      <div class="photo-2">
-        <%= image_tag 'metier-menuisier-400x266.jpg' %>
-      </div>
-      <div class="photo-3">
-        <img src="http://placehold.it/200x200" alt="">
-      </div>
-      <div class="photo-4">
-        <img src="http://placehold.it/250x200" alt="">
-      </div>
-    </div>
+
   </div>
 </div>
 <!-- END -->
