--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -2,16 +2,17 @@
 <%= render 'shared/universe_photo' %>
 
 <div class="container-fluid">
-  <div class="title banner-bk-gray">
+  <div class="banner-bk-gray banner-height">
     <div class="row">
-      <div class="col-sm-10 col-md-offset-1">
+      <div class="col-xs-10 col-xs-offset-1">
         <h1 class="padded-top-lg"><%= @workshop.title %></h1>
       </div>
     </div>
   </div>
 
+
 <!-- THE WORKSHOP -->
-  <div class="title">
+
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
         <hr>
@@ -19,7 +20,7 @@
         <h2 class="padded-bottom-md">workshop</h2>
       </div>
     </div>
-  </div>
+
 
   <div class="row">
 
@@ -153,6 +154,7 @@
 
 
   <!-- ARTISAN -->
+
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <hr>
