--- a/app/assets/stylesheets/layout/_polices.scss
+++ b/app/assets/stylesheets/layout/_polices.scss
@@ -13,6 +13,7 @@ h2 {
   font-size: 80px;
   color: $gray;
   margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 // Titres intermédiares Noms des jobs (workshops#index), reviews(workshop#show),
